# qemu

./: Makefile  Makefile.target  configure  disas.c  exec.c  gdbstub.c  meson.build  meson_options.txt  rules.mak  thunk.c  translate-all.c  user-exec.c
accel/tcg/: internal-target.h  ldst_atomicity.c.inc  ldst_common.c.inc  tcg-runtime.c  tcg-runtime.h  translator.c  user-exec.c
block/: blkdebug.c  blkverify.c
disas/: i386.c
fpu/: softfloat.c
gdbstub/: meson.build
include/disas/: disas.h
include/exec/: cpu-all.h  cpu-common.h  exec-all.h  gen-icount.h  translation-block.h  (+1 more)
libtcg/: dump_tinycode_instruction.c  libtcg.c  libtcg_loader.c  meson.build
linux-user/: Makefile.objs  api.c  fd-trans.c  init_cpu.c  ioctls.h  main.c  mmap.c  ptc.c  ptc.h  qemu.h  signal-common.h  signal.c  strace.c  strace.h  syscall.c  syscall_defs.h  uname.c  user-internals.h
llvm-helpers/: meson.build  to_ll.py
po/: de_DE.po  fr_FR.po  hu.po  it.po  messages.po  tr.po  zh_CN.po
qom/: object.c
scripts/: meson-buildoptions.sh
target-arm/: Makefile.objs  cpu-qom.h  helper-a64.c  helper.c  op_helper.c  translate-a64.c  translate.c
target-i386/: Makefile.objs  cc_helper.c  cc_helper_template.h  cpu-qom.h  cpu.c  cpu.h  excp_helper.c  fpu_helper.c  helper.c  int_helper.c  seg_helper.c  translate.c
target-mips/: Makefile.objs  cpu-qom.h  op_helper.c  translate.c
target-s390x/: Makefile.objs  cc_helper.c  cpu-qom.h  int_helper.c  misc_helper.c  translate.c
tcg/: meson.build  optimize.c  tcg-op.c  tcg.c  tcg.h
trace/: meson.build
util/: oslib-win32.c  rcu.c
(+37 files in other folders)
